added assignment 3 and brick breaker

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -16,10 +16,10 @@
 </head>
 
 <body>
-    <input type="text" id="itemInput" placeholder="Enter grocery item" />
-
-    <button id="addItemButton">Add Item</button>
-
+    <form>
+        <input type="text" id="itemInput" placeholder="Enter grocery item" />
+        <button type="submit" id="addItemButton">Add Item</button>
+    </form>
     <h1>Grocery List</h1>
     <ul id="groceriesList">
     </ul>
