--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <ul>
         <li><a href="./assignment1/">Assignment 1</a></li>
         <li><a href="./assignment2/">Assignment 2</a></li>
+        <li><a href="./assignment3/">Assignment 3</a></li>
+        <li><a href="./blockbreaker/">Bonus</a></li>
     </ul>
 
 </body>
